docs: update README with usage details